YNU-648: Updated submit_app_state endpoint (#493)
---------
